--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,48 +1,51 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #ddd;
-    font-family: Tahoma;
+  background-color: #ddd;
+  font-family: Tahoma;
 }
 
 div#corpo {
-    /* width: 800px; */
-    width: 80%;
-    margin: 10px auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0px 0px 30px #777;
-
+  /* width: 800px; */
+  width: 80%;
+  margin: 10px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0px 0px 30px #777;
 }
 
 table.listagem {
-    width: 100%;
-    text-align: left;
-    border-collapse: collapse;
+  width: 100%;
+  text-align: left;
+  border-collapse: collapse;
 }
 
-
 table.listagem tr {
-    height: 50px;
+  height: 50px;
 }
 
 table.listagem tr:nth-child(even) {
-   background-color: #f2f2f2;
+  background-color: #f2f2f2;
 }
 
 table.listagem td {
-    border: 1px solid #ddd;
-    padding-left: 5px;
+  border: 1px solid #ddd;
+  padding-left: 5px;
 }
 
 table.listagem td:nth-child(1) {
-    width: 50px;
+  width: 50px;
 }
 
 table.listagem td:nth-child(3) {
-    width: 90px;
+  width: 90px;
+}
+
+img.capa {
+  width: 50px;
+  /* height: 50px; */
 }
