--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,3 +1,7 @@
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
+
+
 * {
   margin: 0;
   padding: 0;
@@ -50,10 +54,16 @@ img.capa {
   /* height: 50px; */
 }
 
+img.img_full {
+  height:  400px;
+}
 
 table.detalhe_jogo {
   width: 100%;
-  margin-top: 10px;
-  text-align: left;
-  border-collapse: collapse;
+}
+
+table.detalhe_jogo td {
+  padding: 10px;
+  vertical-align: top;
+  /* border: 1px solid red; */
 }
