--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,6 +1,5 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css');
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
-
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css');
 
 * {
   margin: 0;
@@ -8,9 +7,41 @@
   box-sizing: border-box;
 }
 
-body {
+:root {
+  --bg-primary: #3452ee;
+  --bg-secondary: #2d42c2;
+  --bg-accent: #e9ebf8;
+  --bg-black: #161616;
+  --bg-white: #fff;
+}
+
+.bg-primary {
+  background-color: var(--bg-primary) !important;
+}
+
+.bg-secondary {
+  background-color: var(--bg-secondary) !important;
+}
+
+.bg-accent {
+  background-color: var(--bg-accent) !important;
+}
+
+.bg-black {
+  background-color: var(--bg-black) !important;
+}
+
+.border-light {
+  border: 1px solid white;
+}
+
+.bg body {
   background-color: #ddd;
   font-family: Tahoma;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr auto;
 }
 
 div#corpo {
@@ -55,7 +86,7 @@ img.capa {
 }
 
 img.img_full {
-  height:  400px;
+  height: 400px;
 }
 
 table.detalhe_jogo {
