--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -35,13 +35,14 @@
   border: 1px solid white;
 }
 
-.bg body {
+body {
   background-color: #ddd;
   font-family: Tahoma;
 
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr auto;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100dvh;
 }
 
 div#corpo {
